build: add non-root option
- Windows: add no-daemon option. Close https://github.com/xchacha20-poly1305/husi/issues/876
- Linux: add AppImage. Close https://github.com/xchacha20-poly1305/husi/issues/875